# pytorch-captcha-recognition

./: .gitignore  captcha_cnn_model.py  captcha_predict.py  captcha_setting.py  captcha_train.py  gpu_check.py  one_hot_encoding.py  pyproject.toml
